--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.43.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
