--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
