--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.0.27",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
@@ -19,7 +21,9 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
-    "typescript": "^4.9.4"
+    "react-native-screens": "~3.20.0",
+    "typescript": "^4.9.4",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
