--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.0.27",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4",
-    "react-native-gesture-handler": "~2.9.0",
-    "expo-image-picker": "~14.1.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
