--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "eslint": "^8.43.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
