--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "typescript": "^4.9.4",
     "expo-splash-screen": "~0.18.2",
     "expo-auth-session": "~4.0.3",
-    "expo-crypto": "~12.2.1"
+    "expo-crypto": "~12.2.1",
+    "expo-secure-store": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
