--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "expo": "~48.0.18",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4",
-    "expo-splash-screen": "~0.18.2",
-    "expo-auth-session": "~4.0.3",
-    "expo-crypto": "~12.2.1",
-    "expo-secure-store": "~12.1.1",
-    "expo-web-browser": "~12.1.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
